--- a/src/components/category/Category.scss
+++ b/src/components/category/Category.scss
@@ -1,5 +1,5 @@
 .category {
-  padding: 0em 0.5em;
+  padding: 0.5em 0.5em;
   border-style: solid;
   border-width: 2px;
   border-color: #dbe2e8;
@@ -15,6 +15,7 @@
 
 .heading {
   padding: 0em 0.5em;
+  overflow-wrap: anywhere;
 }
 
 .content {
