HFP-3333 Upgraded to Dart Sass

--- a/src/components/category/Category.scss
+++ b/src/components/category/Category.scss
@@ -1,3 +1,5 @@
+@use '../../styles/h5p-text-grouping.scss' as styles;
+
 .category {
   padding: 0.5em 0.5em;
   border-style: solid;
@@ -22,5 +24,5 @@
   padding: 0em 0.5em;
   list-style-type: none;
 
-  padding-bottom: 1em;
+  padding-bottom: styles.$text-item-height;
 }
