--- a/src/components/category-list/CategoryList.scss
+++ b/src/components/category-list/CategoryList.scss
@@ -5,10 +5,11 @@
 
   .categoriesHeading {
     margin: 0;
-    padding: 0 0 1.5rem 0;
+    padding: 0;
   }
   
   .categoriesWrapper {
+    padding: 2em 0 2em 0;
     display: grid;
     grid-gap: 2em;
     @media only screen and (max-width: 800px) {
