HFP-3336 Format code

--- a/src/components/text-item/TextItem.scss
+++ b/src/components/text-item/TextItem.scss
@@ -4,7 +4,7 @@
   background-color: #f5f7ff;
   color: #1e2d47;
   border-radius: 5px;
-  padding: 0.50em;
+  padding: 0.5em;
 
   font-family: Arial;
   font-size: 1em;
@@ -17,7 +17,7 @@
 
 .text-item-border {
   border-radius: 5px;
-  box-shadow: 4px 4px 4px rgba(204,204,204,0.56);
+  box-shadow: 4px 4px 4px #cccccc8f;
   border-width: 0.15em;
   border-style: solid;
   border-color: #dbe2e8;
@@ -38,7 +38,7 @@
     color: #4174cc;
 
     border-radius: 5px;
-    border-width: 0.10em;
+    border-width: 0.1em;
     border-style: solid;
     border-color: #4174cc;
   }
