HFP-3336 Unify styling

--- a/src/components/Main.scss
+++ b/src/components/Main.scss
@@ -4,7 +4,7 @@
   padding: 0.5em 0.5em;
   border-style: solid;
   border-width: 2px;
-  border-color: #dbe2e8;
+  border-color: styles.$border-color-neutral;
   border-radius: 5px;
 }
 
