--- a/src/components/category/Category.scss
+++ b/src/components/category/Category.scss
@@ -4,12 +4,12 @@
   padding: 0.5em 0.5em;
   border-style: solid;
   border-width: 2px;
-  border-color: #dbe2e8;
+  border-color: styles.$border-color-neutral;
   border-radius: 5px;
 
   hr {
     color: #ffffff00;
-    border-top: 1px solid #dbe2e8;
+    border-top: 1px solid styles.$border-color-neutral;
     border-radius: 5px;
     border-bottom: 0px;
   }
@@ -22,7 +22,7 @@
 }
 
 .content {
-  padding: 0em 0em;
+  padding: 0em 0.25em;
   list-style-type: none;
 
   padding-bottom: styles.$text-item-height;
