Move bold styling away from markup to CSS

--- a/src/components/Main.scss
+++ b/src/components/Main.scss
@@ -11,6 +11,7 @@
 .uncategorized-heading {
   padding: 0.7em 0.5em 0em;
   overflow-wrap: anywhere;
+  font-weight: bold;
 }
 
 .uncategorized-list {
