HFP-3333 Rename color variable

--- a/src/components/textItem/TextItem.scss
+++ b/src/components/textItem/TextItem.scss
@@ -10,7 +10,7 @@
   align-items: center;
   justify-content: space-between;
 
-  color: styles.$black-ish;
+  color: styles.$cornflower-blue-dark;
   font-family: Arial;
   font-size: 1em;
   line-height: 2em;
