--- a/src/components/category/Category.scss
+++ b/src/components/category/Category.scss
@@ -18,7 +18,7 @@
 .heading {
   padding: 0em 0.5em;
   overflow-wrap: anywhere;
-  color: styles.$black-ish;
+  color: styles.$cornflower-blue-dark;
   font-weight: bold;
 }
 
