--- a/src/styles/h5p-text-grouping.scss
+++ b/src/styles/h5p-text-grouping.scss
@@ -1,4 +1,4 @@
-$black-ish: #1e2d47;
+$cornflower-blue-dark: #1e2d47;
 $border-color-neutral: #dbe2e8;
 $text-item-height: 2.5em;
 $column-wrap-width: 800px;
