HFP-3341 Improve design implementation
Fixed several small issues with the design

--- a/src/components/Main.scss
+++ b/src/components/Main.scss
@@ -1,6 +1,7 @@
 @use '../styles/h5p-text-grouping.scss' as styles;
 
 .uncategorized {
+  margin-top: 1em;
   padding: 0.5em 0.5em;
   border-style: solid;
   border-width: 2px;
@@ -14,7 +15,7 @@
 }
 
 .uncategorized-list {
-  padding: 0em 0.5em;
+  padding: 0em 0.25em;
   list-style-type: none;
 
   display: grid;
