HFP-3336 Change min screen size to h5p standard

--- a/src/components/uncategorized/Uncategorized.scss
+++ b/src/components/uncategorized/Uncategorized.scss
@@ -22,7 +22,7 @@
   grid-template-columns: 1fr 1fr;
   column-gap: 1em;
 
-  @media screen and (max-width: styles.$column-wrap-width) {
+  @media screen and (max-width: styles.$small-screen-size) {
     grid-template-columns: 1fr;
   }
 }
