--- a/src/components/categoryList/CategoryList.scss
+++ b/src/components/categoryList/CategoryList.scss
@@ -5,7 +5,7 @@
   grid-gap: 1em;
   grid-template-columns: repeat(2, 1fr);
 
-  @media only screen and (max-width: styles.$column-wrap-width) {
+  @media only screen and (max-width: styles.$small-screen-size) {
     grid-template-columns: 1fr;
   }
 }
