--- a/src/components/uncategorized/Uncategorized.scss
+++ b/src/components/uncategorized/Uncategorized.scss
@@ -1,6 +1,7 @@
 @use '../../styles/h5p-text-grouping.scss' as styles;
 
 .uncategorized {
+  margin-top: 1em;
   padding: 0.5em 0.5em;
   border-style: solid;
   border-width: 2px;
@@ -15,12 +16,13 @@
 }
 
 .uncategorized-list {
-  padding: 0em 0.5em;
+  padding: 0em 0.25em;
+  margin-bottom: 0.5em;
   list-style-type: none;
 
   display: grid;
   grid-template-columns: 1fr 1fr;
-  column-gap: 1em;
+  gap: 0.75em;
 
   @media screen and (max-width: styles.$column-wrap-width) {
     grid-template-columns: 1fr;
