HFP-3339 Show assign to category button

--- a/src/components/category/Category.scss
+++ b/src/components/category/Category.scss
@@ -15,10 +15,14 @@
   }
 
   .heading {
-    padding: 0em 0.5em;
+    padding: 0em 0em 0em 0.5em;
     overflow-wrap: anywhere;
     color: styles.$cornflower-blue-dark;
     font-weight: bold;
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
   }
 
   .content {
