--- a/src/styles/h5p-text-grouping.scss
+++ b/src/styles/h5p-text-grouping.scss
@@ -1,4 +1,6 @@
 $cornflower-blue-dark: #1e2d47;
 $border-color-neutral: #dbe2e8;
-$text-item-height: 2.5em;
+$text-item-background-neutral: #f5f7ff;
+$dropzone-background-neutral: #f0f3fa;
+$text-item-height: 3em;
 $small-screen-size: 640px;
