--- a/src/components/textItem/TextItem.scss
+++ b/src/components/textItem/TextItem.scss
@@ -1,29 +1,19 @@
 @use 'sass:math';
 @use '../../styles/h5p-text-grouping.scss' as styles;
 
-.text-item {
-  background-color: #f5f7ff;
-  border-radius: 5px;
-  padding: 0.5em;
-
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-
-  color: styles.$cornflower-blue-dark;
-  font-family: Arial;
-  font-size: 1em;
-  line-height: 2em;
-}
-
 .text-item-border {
   padding: 0.25em;
+  margin-bottom: 0.75em;
 
   border-style: solid;
   border-width: 0.15em;
   border-radius: 5px;
   border-color: styles.$border-color-neutral;
   box-shadow: 4px 4px 4px #cccccc8f;
+
+  -webkit-column-break-inside: avoid;
+  page-break-inside: avoid;
+  break-inside: avoid;
 
   .text-item {
     background-color: #f5f7ff;
