--- a/src/components/uncategorized/Uncategorized.scss
+++ b/src/components/uncategorized/Uncategorized.scss
@@ -24,7 +24,7 @@
     column-count: 2;
     column-gap: 0.75em;
 
-    @media screen and (max-width: styles.$single-column-size) {
+    @media screen and (max-width: styles.$medium-screen-size) {
       -webkit-column-count: 1;
       -moz-column-count: 1;
       column-count: 1;
