--- a/src/styles/h5p-text-grouping.scss
+++ b/src/styles/h5p-text-grouping.scss
@@ -2,6 +2,7 @@ $cornflower-blue-dark: #1e2d47;
 $border-color-neutral: #dbe2e8;
 $text-item-background-neutral: #f5f7ff;
 $dropzone-background-neutral: #f0f3fa;
+$color-collapse-expand-button: #121212;
 $text-item-height: 3em;
-$single-column-size: 800px;
 $small-screen-size: 640px;
+$medium-screen-size: 768px;
