HFP-3339 Clean up category code

--- a/src/components/commons/DropdownSelect.scss
+++ b/src/components/commons/DropdownSelect.scss
@@ -11,6 +11,7 @@
   width: 100%;
   background: #ffffff;
   overflow-y: auto;
+  z-index: 1;
 
   color: styles.$cornflower-blue-dark;
   filter: drop-shadow(0 0 0.75em styles.$border-color-neutral);
