HFP-3342 Fix collapsed start state refactor bug

--- a/src/components/category/Category.scss
+++ b/src/components/category/Category.scss
@@ -41,7 +41,7 @@
   }
 
   @media only screen and (max-width: styles.$medium-screen-size) {
-    .start-state-content {
+    .second-state-content {
       display: none;
     }
   }
