HFP-3339 Assemble Category header

--- a/src/components/category/Category.scss
+++ b/src/components/category/Category.scss
@@ -15,21 +15,21 @@
     margin-bottom: 0.125em;
   }
 
-  .category-top {
+  .header {
     display: flex;
-  }
-
-  .heading {
+    align-items: center;
+    box-sizing: border-box;
     position: relative;
-    padding: 0em 0em 0em 0.5em;
+    width: 100%;
+
+    padding-right: 0.5em;
     overflow-wrap: anywhere;
     color: styles.$cornflower-blue-dark;
     font-weight: bold;
 
-    display: inline-flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 100%;
+    .title {
+      flex-grow: 2;
+    }
   }
 
   .content {
