HFP-3340 Fix text item dropdown position
Still needs to be moved a bit lower

--- a/src/components/textItem/TextItem.scss
+++ b/src/components/textItem/TextItem.scss
@@ -36,6 +36,7 @@
     background-color: styles.$text-item-background-neutral;
     border-radius: 5px;
     padding: 0.5em;
+    position: relative;
 
     display: flex;
     align-items: center;
