--- a/src/components/category/Category.scss
+++ b/src/components/category/Category.scss
@@ -19,7 +19,6 @@
     display: flex;
     align-items: center;
     box-sizing: border-box;
-    position: relative;
     width: 100%;
 
     padding: 0em 0.5em;
@@ -30,6 +29,11 @@
     .title {
       flex-grow: 2;
     }
+  }
+
+  .dropdown-wrapper {
+    top: 0.7em;
+    position: relative;
   }
 
   .content {
