--- a/src/components/category/Category.scss
+++ b/src/components/category/Category.scss
@@ -45,7 +45,7 @@
   }
 
   @media only screen and (max-width: styles.$medium-screen-size) {
-    .second-state-content {
+    .collapsed {
       display: none;
     }
 
@@ -56,14 +56,6 @@
 
   @media screen and (max-width: styles.$small-screen-size) {
     margin: -1px 0 -1px 0;
-
-    .start-state-content {
-      display: none;
-    }
-
-    .second-state-content {
-      display: inline;
-    }
 
     .header {
       padding-left: 0em;
