HFP-3356 Refactor animation names

--- a/src/components/textItem/TextItem.scss
+++ b/src/components/textItem/TextItem.scss
@@ -9,13 +9,13 @@
   break-inside: avoid;
 
   &.animate {
-    animation: example;
+    animation: fadeIn;
     animation-duration: 1s;
     animation-fill-mode: forwards;
 
     .text-item-border {
-      animation: example2;
-      animation-delay: .6s;
+      animation: flashBorder;
+      animation-delay: .5s;
       animation-duration: .5s;
       animation-fill-mode: forwards;
       animation-timing-function: linear;
@@ -68,7 +68,7 @@
   }
 }
 
-@keyframes example {
+@keyframes fadeIn {
   0% {
     opacity: 0%;
   }
@@ -77,7 +77,7 @@
   }
 }
 
-@keyframes example2 {
+@keyframes flashBorder {
   0% {
     border-color: styles.$border-color-neutral;
   }
