HFP-3340 Update single dropdown design + simplify

--- a/src/styles/h5p-text-grouping.scss
+++ b/src/styles/h5p-text-grouping.scss
@@ -3,6 +3,7 @@ $border-color-neutral: #dbe2e8;
 $text-item-background-neutral: #f5f7ff;
 $dropzone-background-neutral: #f0f3fa;
 $color-collapse-expand-button: #121212;
+$disabled-text-color: #969696;
 $text-item-height: 3em;
 $small-screen-size: 640px;
 $medium-screen-size: 768px;
