--- a/src/components/commons/DropdownSelect.scss
+++ b/src/components/commons/DropdownSelect.scss
@@ -48,8 +48,15 @@
     line-height: 1.8em;
 
     &:hover {
-      background: styles.$text-item-background-neutral;
+      &:not(.disabled) {
+        cursor: pointer;
+        background: styles.$text-item-background-neutral;
+      }
     }
+  }
+
+  .disabled {
+    color: styles.$disabled-text-color;
   }
 
   .selected {
@@ -70,21 +77,7 @@
     }
   }
 
-  .radioChecked {
-    &:before {
-      font-family: 'Material Icons';
-      font-size: 2em;
-      content: 'radio_button_checked';
-      padding-right: 0.5em;
-    }
-  }
-
-  .radioUnchecked {
-    &:before {
-      font-family: 'Material Icons';
-      font-size: 2em;
-      content: 'radio_button_unchecked';
-      padding-right: 0.5em;
-    }
+  .radioSelected {
+    background: styles.$text-item-background-neutral;
   }
 }
