HFP-3343 Add solution colors

--- a/src/styles/h5p-text-grouping.scss
+++ b/src/styles/h5p-text-grouping.scss
@@ -7,3 +7,10 @@ $disabled-text-color: #969696;
 $text-item-height: 3em;
 $small-screen-size: 640px;
 $medium-screen-size: 768px;
+
+$color-correct-light: #edfff0;
+$color-correct-dark: #6ea776;
+$color-wrong-light: #ffe6e3;
+$color-wrong-dark: #d33120;
+$color-show-correct-dark: #1a73d9;
+$color-show-correct-light: #e4edf7; ;
