HFP-3339 Fix focus issue when closing multi select

--- a/src/components/category/Category.scss
+++ b/src/components/category/Category.scss
@@ -62,3 +62,17 @@
     }
   }
 }
+
+.button-assign-items {
+  border: none;
+  background: none;
+}
+
+.icon-assign-items {
+  &:before {
+    font-family: 'Material Icons';
+    font-size: 2em;
+    content: 'queue';
+    color: #4174cc;
+  }
+}
