--- a/src/styles/h5p-text-grouping.scss
+++ b/src/styles/h5p-text-grouping.scss
@@ -1,17 +1,4 @@
-$cornflower-blue-dark: #1e2d47;
-$border-color-neutral: #dbe2e8;
-$text-item-background-neutral: #f5f7ff;
-$dropzone-background-neutral: #f0f3fa;
-$color-collapse-expand-button: #121212;
-$disabled-text-color: #969696;
-$text-item-height: 3em;
-$small-screen-size: 640px;
-$medium-screen-size: 768px;
-
-$color-correct-light: #edfff0;
-$color-correct-dark: #6ea776;
-$color-correct-text: #4d7a53;
-$color-wrong-light: #ffe6e3;
-$color-wrong-dark: #d33120;
-$color-show-correct-dark: #1a73d9;
-$color-show-correct-light: #e4edf7; ;
+@forward 'colors';
+@forward 'mixins';
+@forward 'breakpoints';
+@forward 'sizes';
