Export everything in styles using index

--- a/src/components/textItem/TextItem.scss
+++ b/src/components/textItem/TextItem.scss
@@ -1,5 +1,5 @@
 @use 'sass:math';
-@use '../../styles/h5p-text-grouping.scss' as styles;
+@use '../../styles/' as styles;
 
 .text-item-wrapper {
   padding: 0.375em 0 0.375em 0;
