--- a/src/components/commons/Dropzone.scss
+++ b/src/components/commons/Dropzone.scss
@@ -1,4 +1,4 @@
-@use '../../styles/h5p-text-grouping.scss' as styles;
+@use '../../styles/' as styles;
 
 .dropzone {
   border: dotted 2px #4174cc;
