--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -1,4 +1,4 @@
-@mixin solution-button($icon, $color) {
+@mixin solution-icon($icon, $color) {
   display: block;
   font-family: 'Material Icons';
   font-size: 2.5em;
