HFP-3343 Make screen reader able to readd correct answer

--- a/src/components/textItem/TextItem.scss
+++ b/src/components/textItem/TextItem.scss
@@ -106,6 +106,16 @@
   }
 }
 
+.offscreen {
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
+
 @keyframes fadeIn {
   0% {
     opacity: 0%;
