HFP-3344 Show tip swap button

--- a/src/components/textItem/TextItem.scss
+++ b/src/components/textItem/TextItem.scss
@@ -48,6 +48,10 @@
         background-color: styles.$color-wrong-light;
       }
 
+      .swap-icon:before {
+        @include styles.swap-icon(styles.$color-wrong-dark);
+      }
+
       .solution-icon:before {
         @include styles.solution-icon('cancel', styles.$color-wrong-dark);
       }
@@ -62,6 +66,10 @@
       .text-item {
         color: styles.$color-show-correct-dark;
         background-color: styles.$color-show-correct-light;
+      }
+
+      .swap-icon:before {
+        @include styles.swap-icon(styles.$color-show-correct-dark);
       }
 
       .solution-icon:before {
