HFP-3344 Fix swap icon styling

--- a/src/components/textItem/TextItem.scss
+++ b/src/components/textItem/TextItem.scss
@@ -100,6 +100,10 @@
       font-family: Arial;
       font-size: 1em;
       line-height: 3em;
+
+      .content {
+        flex-grow: 1;
+      }
     }
 
     .dropdown-wrapper {
