--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -16,9 +16,10 @@
 }
 
 @mixin swap-icon($color) {
+  padding: 0em 0.25em;
   display: block;
   font-family: 'Material Icons';
-  font-size: 2.5em;
+  font-size: 2em;
   content: 'swap_horiz';
   color: $color;
 
