HFP-3348 Update colors

--- a/src/components/category/Category.scss
+++ b/src/components/category/Category.scss
@@ -102,7 +102,7 @@
     font-family: 'Material Icons';
     font-size: 2em;
     content: 'queue';
-    color: #4174cc;
+    color: styles.$action-icon-color;
   }
 }
 
