--- a/src/components/commons/Dropzone.scss
+++ b/src/components/commons/Dropzone.scss
@@ -1,7 +1,7 @@
 @use '../../styles/' as styles;
 
 .dropzone {
-  border: dotted 2px #4174cc;
+  border: dotted 2px styles.$dropzone-border-color;
   border-radius: 5px;
   height: styles.$text-item-height;
   margin-top: 0.375em;
@@ -12,7 +12,7 @@
     font-family: 'Material Icons';
     font-size: 2em;
     content: 'add';
-    color: #4174cc;
+    color: styles.$action-icon-color;
     height: 100%;
     align-items: center;
     display: flex;
