--- a/src/components/category/Category.scss
+++ b/src/components/category/Category.scss
@@ -54,7 +54,7 @@
 
     padding: 0em 0.5em;
     overflow-wrap: anywhere;
-    color: styles.$cornflower-blue-dark;
+    color: styles.$text-color;
     font-weight: bold;
 
     .title {
