--- a/src/components/commons/DropdownSelect.scss
+++ b/src/components/commons/DropdownSelect.scss
@@ -13,7 +13,7 @@
   overflow-y: auto;
   z-index: 1;
 
-  color: styles.$cornflower-blue-dark;
+  color: styles.$text-color;
   filter: drop-shadow(0 0 0.75em styles.$border-color-neutral);
   font-weight: normal;
 
