--- a/src/components/textItem/TextItem.scss
+++ b/src/components/textItem/TextItem.scss
@@ -96,7 +96,7 @@
       align-items: center;
       justify-content: space-between;
 
-      color: styles.$cornflower-blue-dark;
+      color: styles.$text-color;
       font-family: Arial;
       font-size: 1em;
       line-height: 3em;
