--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,4 +1,4 @@
-$cornflower-blue-dark: #1e2d47;
+$text-color: #1e2d47;
 $border-color-neutral: #dbe2e8;
 $text-item-background-neutral: #f5f7ff;
 $text-item-background-dark: #deeafa;
