--- a/src/components/category/Category.scss
+++ b/src/components/category/Category.scss
@@ -104,10 +104,18 @@
     content: 'queue';
     color: styles.$action-icon-color;
   }
+
+  &:hover {
+    cursor: pointer;
+  }
 }
 
 .expand-collapse-button {
   display: none;
+
+  &:hover {
+    cursor: pointer;
+  }
 }
 
 @media only screen and (max-width: styles.$medium-screen-size) {
