--- a/src/components/textItem/TextItem.scss
+++ b/src/components/textItem/TextItem.scss
@@ -128,6 +128,10 @@
   border: none;
   background: none;
   margin-left: 0.75em;
+
+  &:hover {
+    cursor: pointer;
+  }
 }
 
 .icon-move-to-category {
