HFP-3344 Show hover effects in normal mode

--- a/src/components/textItem/TextItem.scss
+++ b/src/components/textItem/TextItem.scss
@@ -106,8 +106,8 @@
       }
     }
 
-    &:enabled {
-      &:hover {
+    &:hover {
+      &:not(.show-solution) {
         cursor: pointer;
         border-style: dotted;
         border-color: styles.$text-item-border-color;
