Fix text column breaks bug
The text inside text items in Uncategorized would inherit the
column-count property of .uncategorized.content

--- a/src/components/textItem/TextItem.scss
+++ b/src/components/textItem/TextItem.scss
@@ -101,7 +101,7 @@
       font-size: 1em;
       line-height: 3em;
 
-      .content {
+      .text-item-content {
         flex-grow: 1;
       }
     }
