--- a/src/components/category/Category.scss
+++ b/src/components/category/Category.scss
@@ -16,7 +16,7 @@
       font-weight: bold;
     }
 
-    .content {
+    .category-content {
       position: relative;
 
       -webkit-column-count: 2;
@@ -67,7 +67,7 @@
     position: relative;
   }
 
-  .content {
+  .category-content {
     padding: 0em 0.25em;
     margin: 0;
     list-style-type: none;
