--- a/src/components/textItem/TextItem.scss
+++ b/src/components/textItem/TextItem.scss
@@ -133,7 +133,7 @@
 
   &:hover {
     cursor: pointer;
-    filter: brightness(80%);
+    background-color: styles.$text-item-background-dark;
   }
 }
 
