--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -7,6 +7,8 @@ $color-collapse-expand-button: #121212;
 $disabled-text-color: #969696;
 
 $action-icon-color: #4174cc;
+$action-icon-color-light: #cfe4ff;
+$action-icon-color-dark: #2f5596;
 
 $dropzone-background-neutral: #f0f3fa;
 $dropzone-border-color: #287ec9;
