HFP-3345 Revamp drag and drop
Completeley redid drag and drop implementation.
Drag and drop now visualizes when an item is being dragged,
and the dropzones are visible only when hovering over with a
text item that does not currently belong to this category

--- a/src/components/textItem/TextItem.scss
+++ b/src/components/textItem/TextItem.scss
@@ -86,6 +86,7 @@
     border-radius: 5px;
     border-color: styles.$border-color-neutral;
     box-shadow: 4px 4px 4px #cccccc8f;
+    background-color: styles.$h5p-question-background;
 
     .text-item {
       background-color: styles.$text-item-background-neutral;
