--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,5 +1,6 @@
 $cornflower-blue-dark: #1e2d47;
 $border-color-neutral: #dbe2e8;
+$h5p-question-background: #ffffff;
 $text-item-background-neutral: #f5f7ff;
 $dropzone-background-neutral: #f0f3fa;
 $color-collapse-expand-button: #121212;
