HFP-3348 Change focus & hover combination

--- a/src/components/textItem/TextItem.scss
+++ b/src/components/textItem/TextItem.scss
@@ -110,11 +110,13 @@
     &:hover {
       &:not(.show-solution) {
         cursor: pointer;
-        border-style: dotted;
-        border-color: styles.$text-item-border-color;
+        &:not(:focus-within) {
+          border-style: dotted;
+          border-color: styles.$text-item-border-color;
 
-        .text-item {
-          background-color: styles.$text-item-background-dark;
+          .text-item {
+            background-color: styles.$text-item-background-dark;
+          }
         }
       }
     }
